
Voicemail
------------------
 * app_voicemail and res_mwi_external can now be built together.  The default
   remains to build app_voicemail and not res_mwi_external but if they are
   both built, the load order will cause res_mwi_external to load first and
   app_voicemail will be skipped.  Use 'preload=app_voicemail.so' in
   modules.conf to force app_voicemail to be the voicemail provider.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.6.0 to Asterisk 13.7.0 ------------
------------------------------------------------------------------------------

Codecs
------------------
 * Added format attribute negotiation for the VP8 video codec. Format attribute
   negotiation is provided by the res_format_attr_vp8 module.

ConfBridge
------------------
 * A new "timeout" user profile option has been added. This configures the number
   of seconds that a participant may stay in the ConfBridge after joining. When
   the time expires, the user is ejected from the conference and CONFBRIDGE_RESULT
   is set to "TIMEOUT" on the channel.

chan_sip
------------------
 * The websockets_enabled option has been added to the general section of
   sip.conf.  The option is enabled by default to match the previous behavior.
   The option should be disabled when using res_pjsip_transport_websockets to
   ensure chan_sip will not conflict with PJSIP websockets.

Dialplan Functions
------------------
 * The HOLD_INTERCEPT dialplan function now actually exists in the source tree.
   While support for the events was added in Asterisk 13.4.0, the function
   accidentally never made it in. That function is now present, and will cause
   the 'hold' raised by a channel to be intercepted and converted into an
   event instead.

res_pjsip_outbound_registration
-------------------------------
 * If res_statsd is loaded and a StatsD server is configured, basic statistics